# YITING

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml
agents/: __init__.py
artifacts/: deployment-verification.json  docker-image-smoke.json  qwen-smoke.json  track3-baseline-command-log.txt  track3-baseline.json  track3-paired-benchmark-raw.json  track3-paired-benchmark.csv  track3-paired-benchmark.json
dashboard/: Dockerfile  README.md  package-lock.json  package.json
deploy/: Caddyfile
docker/: entrypoint.sh
docs/: ADOPTION_ROADMAP.md  ALIBABA_CLOUD_PROOF.md  ALIBABA_DEPLOYMENT_PROOF.md  ARCHITECTURE.md  BASELINE_MEASUREMENT.md  BLOG_POST.md  COMPLETION_AUDIT.md  DEMO_SCRIPT.md  DEPLOYMENT_PROOF.md  ENGINEERING_PROOF.md  FINAL_SUBMISSION_CHECKLIST.md  INSTALL_AND_RUN.md  JUDGE_PACKET.md  JUDGE_TESTING.md  JUDGING_RUBRIC.md  PUBLIC_JUDGE_MODE.md  PUBLIC_REPOSITORY.md  SECURITY.md  SLIDE_DECK.md  SOCIAL_POST.md  SUBMISSION.md  SUBMISSION_FORM.md  THIRD_PARTY_COMPLIANCE.md  TRACK3_AGENT_SOCIETY.md  TRACK3_SCORECARD.md
evals/: track3_live_paired_scenarios.json  track3_paired_scenarios.json
gateway/: __init__.py  app.py  auth.py  database.py  mcp.py  rate_limit.py
landing/: index.html  script.js  style.css
scripts/: app_restart_resilience.py  backup_restore_check.py  closure_run.py  docker_image_smoke.py  ecs_ops_acceptance.py  final_proof_index.py  finalize_submission.py  generate_deployment_env.py  human_demo.py  local_certify.py  package_submission.py  preflight.sh  qwen_smoke.py  reset_demo.py  (+13 more)
(+147 files in other folders)
